# TuxSinbad

./: .cproject  .project  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  html.cfg  openNi.xml  version.txt
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Components/: Makefile  cmake_install.cmake
Components/Paging/: Makefile  cmake_install.cmake
Components/Property/: Makefile  cmake_install.cmake
Components/RTShaderSystem/: Makefile  cmake_install.cmake
Components/Terrain/: Makefile  cmake_install.cmake
Debug/: makefile  objects.mk  sources.mk
Docs/: Makefile  cmake_install.cmake
OgreMain/: Makefile  cmake_install.cmake
PlugIns/: Makefile  cmake_install.cmake
PlugIns/BSPSceneManager/: Makefile  cmake_install.cmake
PlugIns/CgProgramManager/: Makefile  cmake_install.cmake
PlugIns/OctreeSceneManager/: Makefile  cmake_install.cmake
PlugIns/OctreeZone/: Makefile  cmake_install.cmake
RenderSystems/: Makefile  cmake_install.cmake
Samples/: Makefile  cmake_install.cmake
Samples/Character/: CMakeLists.txt  Makefile  cmake_install.cmake
Samples/Character/include/: CharacterSample.h  SinbadCharacterController.h  SkeletonPoseDetector.h
Samples/Character/src/: CharacterSample.cpp
Tools/: Makefile  cmake_install.cmake
lib/: libOgrePaging.so.1.7.2  libOgrePaging_d.so.1.7.2  libOgreProperty.so.1.7.2  libOgreProperty_d.so.1.7.2  libOgreTerrain.so.1.7.2
pkgconfig/: OGRE-PCZ.pc  OGRE-Paging.pc  OGRE-Property.pc  OGRE-RTShaderSystem.pc  OGRE-Terrain.pc  OGRE.pc
(+192 files in other folders)
